--- a/simpleJDB/setup.cfg
+++ b/simpleJDB/setup.cfg
@@ -6,9 +6,9 @@ author_email = krisellp9@gmail.com
 description = a simple key based json databse
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/Milkman337/simpleJDB
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/Milkman337/simpleJDB/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
