--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = simpleJDB
-version = 0.1.2
+version = 0.1.3
 author = Jan
 author_email = krisellp9@gmail.com
-description = a simple key based json databse
+description = jsonDB - A Python library for json-based databases with thread-safety, staging/commit and easy-to-use API.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Milkman337/simpleJDB/tree/master/simpleJDB
